--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,10 @@ body {
     background-size: contain;
 }
 
+section{
+    box-shadow: -3px -3px 40px 1px rgba(0, 0, 0, 0.7);
+}
+
 /* HEADER */
 
 header {
